--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -187,12 +187,12 @@
 
 
         <button class="carousel-control-prev text-dark " type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev">
+            data-bs-slide="prev"  style="margin-right: 100px; border: 2px solid red; width: 50px;">
             <span class="carousel-control-prev-icon bg-info" aria-hidden="true" style="border-radius: 50%;"></span>
             <span class="visually-hidden ">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next">
+            data-bs-slide="next"  style="margin-left: 100px; border: 2px solid red; width: 50px;">
             <span class="carousel-control-next-icon bg-info" aria-hidden="true" style="border-radius: 50%;"></span>
             <span class="visually-hidden">Next</span>
         </button>
@@ -220,6 +220,8 @@
                 </div>
                 <div class="info">
                     <h4>Dev Patel</h4>
+                    <p>Graphics Expert</p>
+
                 </div>
             </div>
             <div class="single-review">
@@ -244,7 +246,7 @@
                 </div>
                 <div class="info">
                     <h4>Mark Wood</h4>
-                    <!-- <p>Graphics Expert</p> -->
+                    <p>Graphics Expert</p>
                 </div>
             </div>
             <div class="single-review">
@@ -270,7 +272,7 @@
                 </div>
                 <div class="info">
                     <h4>Jason Chedd</h4>
-                    <!-- <p>Web Designer</p> -->
+                    <p>Web Designer</p>
                 </div>
             </div>
             <div class="single-review">
@@ -297,7 +299,7 @@
                 </div>
                 <div class="info">
                     <h4>Jason Chedd</h4>
-                    <!-- <p>Web Designer</p> -->
+                    <p>Web Designer</p>
                 </div>
             </div>
             <div class="single-review">
