--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -2,13 +2,10 @@
     <img class="img-fluid" src="assets/about.jpg" class="card-img" alt="About Us" height="220" width="auto">
     <div class="card-img-overlay">
         <h5 class="h5 card-title mt-5"> <span style="color: rgb(255, 0, 230);">About</span> Us</h5>
-
-        <!-- <p class="card-text" style="float: right; margin-top: 150px;">Thank you for visiting this section, here you will
-            know all about me.</p> -->
     </div>
 </div>
 
-
+<!-- About Lab -->
 <div class="col mt-5 p-5">
     <p class="about-text">
         Book a blood test or expert health check-up packages online with Patel Healthcare - one of the leading
@@ -25,6 +22,7 @@
     </p>
 </div>
 
+<!-- About Managing Director -->
 <div class="container-xxl">
     <div class="row p-3">
         <div class="col-sm-1"></div>
@@ -73,6 +71,7 @@
     </div>
 </div>
 
+<!-- Our Mission & Target -->
 <div class="row m-5 mt-4">
 
     <div class="col m-2">
@@ -87,6 +86,8 @@
     </div>
 </div>
 
+
+<!-- Our Team List -->
 <h1 class="mt-5 ps-5 text-center">Our Team</h1>
 
 
