--- a/src/app/images/images.component.css
+++ b/src/app/images/images.component.css
@@ -1,75 +1,16 @@
-/* .card:hover {
-
-    transition: all 0.5s ease-in;
-}
-
-.card img {
-    width: 100%;
-    height: 100%;
-}
-
-.card {
-    cursor: pointer;
-    overflow: hidden;
-    display: flex;
-}
-
-.card-body {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: linear-gradient(rgba(0, 0, 0, .1), #0fe);
-    color: #000000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    opacity: 0;
-    transform: translateY(100%);
-    transition: .5s ease;
-}
-
-.card:hover .card-body {
-    transform: translateY(0);
-
-}
-
-.card-text {
-    font-family: roboto;
-    font-weight: bold;
-    text-align: center;
-    height: auto;
-    width: 100%;
-}
-
-.card-body:hover {
-    opacity: 1;
-} */
-
-
-
 /* Responsive Grid Images Section */
 
 .row {
-    /* display: -ms-flexbox; */
-    /* IE10 */
     display: flex;
-    /* -ms-flex-wrap: wrap; */
-    /* IE10 */
     flex-wrap: wrap;
     padding: 0 4px;
 }
 
 /* Create four equal columns that sits next to each other */
 .column {
-    /* -ms-flex: 25%; */
-    /* IE10 */
     flex: 25%;
     max-width: calc(100%/3);
     padding: 13px;
-    /* padding: 0 4px; */
 }
 
 .column img {
@@ -77,22 +18,22 @@
     vertical-align: middle;
     width: 100%;
 }
-.column img:hover{
+
+.column img:hover {
     border-radius: 6px;
     border: 2px solid rgb(255, 0, 230);
 
     box-shadow: 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030,
-     0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030,
-     0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030,
-     0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030,
-      0 0px 8px 0px #00000030
-      ;
+        0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030,
+        0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030,
+        0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030,
+        0 0px 8px 0px #00000030;
 
 }
+
 /* Responsive layout - makes a two column-layout instead of four columns */
 @media screen and (max-width: 800px) {
     .column {
-        /* -ms-flex: 50%; */
         flex: 50%;
         max-width: 50%;
     }
@@ -101,7 +42,6 @@
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
     .column {
-        /* -ms-flex: 100%; */
         flex: 100%;
         max-width: 100%;
     }
