--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -42,6 +42,10 @@
               <hr class="dropdown-divider">
             </li>
             <li><a class="dropdown-item" routerLink="/video">Videos</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" routerLink="/add-package">Add Package</a></li>
           </ul>
         </li>
 
