--- a/src/app/carousel/carousel.component.css
+++ b/src/app/carousel/carousel.component.css
@@ -1,21 +1,35 @@
-.carousel-item{
+.carousel-item {
     width: 100%;
     height: 380px;
 }
 
+.carousel-indicators button {
+    border-radius: 50%;
+    height: 20px;
+    width: 20px;
+    background-color: rgb(0, 0, 0);
+
+}
+
+.carousel-indicators button:hover {
+   
+    background-color: rgb(255, 0, 217);
+}
 
 /* KEYPOINTS FOR CAROUSEL BUTTON */
 
-.c-item{
+.c-item {
     height: 450px;
 
 }
-.c-img{
+
+.c-img {
     height: 100%;
     object-fit: cover;
     filter: brightness(1);
 }
-.carousel-caption{
+
+.carousel-caption {
     position: absolute;
     left: 0;
 }
