--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -2,9 +2,9 @@
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true"
             aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"  ></button>
+        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="2" aria-label="Slide 3"  ></button>
+        <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="3" aria-label="Slide 4"   ></button>
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active  c-item">
@@ -18,24 +18,24 @@
         </div>
         <div class="carousel-item c-item">
             <img src="assets/Carousel_Images/Carousel-2.png" class=" img-fluid c-img d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <!-- <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
-            </div>
+            </div> -->
         </div>
         <div class="carousel-item c-item">
             <img src="assets/Carousel_Images/Carousel-3.png" class="c-img d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <!-- <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
-            </div>
+            </div> -->
         </div>
         <div class="carousel-item">
             <img src="assets/Carousel_Images/Carousel-4.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <!-- <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
-            </div>
+            </div> -->
         </div>
     </div>
     <button class="carousel-control-prev carousel-dark" type="button" data-bs-target="#hero-carousel"
