--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,6 +7,20 @@ div {
     font-family: poppins;
 }
 
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+    border-radius: 50%;
+    background-color: rgb(255, 0, 128);
+    transition: 0.5s ease;
+}
+
+.carousel-control-next-icon:hover,
+.carousel-control-prev-icon:hover {
+    color: #000000;
+    background-color: #02c9fb;
+    box-shadow: 0 2px 10px #02c9fb, 0 2px 10px #02c9fb, 0 2px 10px #02c9fb;
+}
+
 .carousel {
     margin: 10px;
 }
@@ -17,7 +31,7 @@ div {
 
 .card {
 
-    height: 380px;
+    height: 400px;
     width: 250px;
     margin-right: 10px;
     transition: all 0.4s ease;
@@ -34,8 +48,8 @@ div {
 }
 
 .card:hover {
-    /* box-shadow: 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030; */
-    transform: translateY(-15px);
+    box-shadow: 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 1px 10px 8px 2px #00000030, 0 0px 8px 0px #00000030, 0 0px 8px 0px #00000030;
+    /* transform: translateY(-15px); */
 }
 
 .review-card {
