--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,12 +3,11 @@
 
 <div class="container-fluid package mt-5">
 
-    <h1 class="h1 ms-4">Our Best <span style="color: rgb(255, 0, 230);">Packages</span></h1>
+    <div class="head d-flex ">
+        <h1 class="h1 ms-4">Our Best <span style="color: rgb(255, 0, 230);">Packages</span></h1>
+    </div>
     <p class="m-3">Choose from our wide range of TruHealth Package and Health Checkups</p>
-    <!-- <div class="bton">
-    <button routerLink="/package" class="btn btn-info p-2 m-1" >View More</button>
 
-</div> -->
     <div id="carouselExampleControls" class="carousel slide p-4 mt-4 " data-bs-ride="carousel">
         <div class="carousel-inner mb-4">
             <div class="carousel-item active">
@@ -24,21 +23,21 @@
                                 <p class="card-text">
                                     Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
-                                <p class="mt-3">Rs. 230</p>
-                                <a href="#" class="btn btn-primary">View More</a>
+                                <h5>Rs. <span>150</span></h5>
+                                <!-- <a href="#" class="btn btn-primary">View More</a> -->
                             </div>
                         </div>
                         <div class="card d-none d-sm-block">
                             <img src="assets/Services/Medical-store.jpg" class="card-img-top" alt="...">
 
                             <div class="card-body">
-                                <h5 class="card-title">CBC (Complete Blood Count) Test</h5>
+                                <h5 class="card-title">CBC (Complete Blood Count) Test </h5>
                                 <hr>
                                 <p class="card-text">
                                     Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
                                 <h5>Rs. <span>150</span></h5>
-                                <a href="#" class="btn btn-primary mt-5">View More</a>
+                                <!-- <a href="#" class="btn btn-primary">View More</a> -->
                             </div>
                         </div>
                         <div class="card d-none d-md-block">
@@ -48,7 +47,8 @@
                                 <p class="card-text">
                                     Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">View More</a>
+                                <h5>Rs. <span>150</span></h5>
+                                <!-- <a href="#" class="btn btn-primary">View More</a> -->
                             </div>
                         </div>
                         <div class="card  d-none d-md-block">
@@ -58,7 +58,8 @@
                                 <p class="card-text">
                                     Some quick example text to build on the card title and make up the
                                     bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">View More</a>
+                                <h5>Rs. <span>150</span></h5>
+                                <!-- <a href="#" class="btn btn-primary">View More</a> -->
                             </div>
                         </div>
                     </div>
@@ -78,7 +79,8 @@
                                     fast (not eating).
                                     <!-- Blood glucose (sugar) is derived from food and it is the main source of energy. -->
                                 </p>
-                                <a href="#" class="btn btn-primary">View More</a>
+                                <h5>Rs. <span>150</span></h5>
+                                <!-- <a href="#" class="btn btn-primary">View More</a> -->
                             </div>
                         </div>
                         <div class="card d-none d-sm-block">
@@ -92,7 +94,8 @@
                                     <!-- This test does not require fasting and is not affected by meals
                                     consumed immediately before the test (less prone to variation). -->
                                 </p>
-                                <a href="#" class="btn btn-primary">View More</a>
+                                <h5>Rs. <span>150</span></h5>
+                                <!-- <a href="#" class="btn btn-primary">View More</a> -->
                             </div>
                         </div>
                         <div class="card d-none d-md-block">
@@ -105,7 +108,8 @@
                                     <!-- They aid in the diagnosis and management
                                     of conditions affecting kidneys. -->
                                 </p>
-                                <a href="#" class="btn btn-primary">View More</a>
+                                <h5>Rs. <span>150</span></h5>
+                                <!-- <a href="#" class="btn btn-primary">View More</a> -->
                             </div>
                         </div>
                         <div class="card  d-none d-md-block">
@@ -117,7 +121,8 @@
                                     to assess thyroid gland function and identify thyroid diseases.
                                     <!-- These tests count the number of thyroid hormones present in the blood. -->
                                 </p>
-                                <a href="#" class="btn btn-primary">View More</a>
+                                <h5>Rs. <span>150</span></h5>
+                                <!-- <a href="#" class="btn btn-primary">View More</a> -->
                             </div>
                         </div>
                     </div>
@@ -139,7 +144,8 @@
                                     <!-- High levels of urea nitrogen in the blood can be a sign of kidney
                                     disease. -->
                                 </p>
-                                <a href="#" class="btn btn-primary">View More</a>
+                                <h5>Rs. <span>150</span></h5>
+                                <!-- <a href="#" class="btn btn-primary">View More</a> -->
                             </div>
                         </div>
                         <div class="card d-none d-sm-block">
@@ -151,7 +157,8 @@
                                     uric acid in the blood.
                                     <!-- A simple blood test is used to determine uric acid levels. -->
                                 </p>
-                                <a href="#" class="btn btn-primary">View More</a>
+                                <h5>Rs. <span>150</span></h5>
+                                <!-- <a href="#" class="btn btn-primary">View More</a> -->
                             </div>
                         </div>
                         <div class="card d-none d-md-block">
@@ -164,7 +171,8 @@
                                     <!-- Vegetarians are at risk of deficiency of Vitamin B12 as there are no plant
                                     sources of Vitamin B12. -->
                                 </p>
-                                <a href="#" class="btn btn-primary">View More</a>
+                                <h5>Rs. <span>150</span></h5>
+                                <!-- <a href="#" class="btn btn-primary">View More</a> -->
                             </div>
                         </div>
                         <div class="card  d-none d-md-block">
@@ -177,7 +185,8 @@
                                     <!-- The concentration of 25-hydroxyvitamin D in the blood is a reliable
                                     indicator of vitamin D levels in your body. -->
                                 </p>
-                                <a href="#" class="btn btn-primary">View More</a>
+                                <h5>Rs. <span>150</span></h5>
+                                <!-- <a href="#" class="btn btn-primary">View More</a> -->
                             </div>
                         </div>
                     </div>
@@ -187,17 +196,24 @@
 
 
         <button class="carousel-control-prev text-dark " type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="prev"  style="margin-right: 100px; border: 2px solid red; width: 50px;">
-            <span class="carousel-control-prev-icon bg-info" aria-hidden="true" style="border-radius: 50%;"></span>
+            data-bs-slide="prev"
+            style="margin-right: 100px; width: 50px;  height: 100px; position: absolute; top: 35%;">
+            <span class="carousel-control-prev-icon " aria-hidden="true" ></span>
             <span class="visually-hidden ">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-            data-bs-slide="next"  style="margin-left: 100px; border: 2px solid red; width: 50px;">
-            <span class="carousel-control-next-icon bg-info" aria-hidden="true" style="border-radius: 50%;"></span>
+            data-bs-slide="next" style="margin-left: 100px; width: 50px; height: 100px; position: absolute; top: 35%;">
+            <span class="carousel-control-next-icon " aria-hidden="true" ></span>
             <span class="visually-hidden">Next</span>
         </button>
+        <button routerLink="/package" class="btn btn-info p-2 mt-2 w-100 fs-5">View
+            More Packages</button>
+
 
     </div>
+
+
+
 </div>
 
 
