--- a/src/app/packages/packages.component.html
+++ b/src/app/packages/packages.component.html
@@ -25,7 +25,8 @@
     <div class="card mb-5" style="max-width: 100%; " *ngIf="i%2==0">
         <div class="row g-">
             <div class="col-md-4">
-                <img [src]="data.imageUrl" class="img-fluid " alt="...">
+                <a routerLink="/view-details/{{data.id}}">
+                    <img [src]="data.imageUrl" class="img-fluid " alt="..."></a>
             </div>
             <div class="col-md-8 ">
                 <div class="card-body p-5">
